# cmakeQuickStart

./: CMakeLists.txt  main.cpp
